@@ -9,7 +9,7 @@ micrometer = "1.13.2"
 micrometer-docs-gen = "1.0.3"
 micrometer-tracing = "1.3.2"
 protobuf = "3.25.4"
-pulsar = "3.3.0"
+pulsar = "3.3.1"
 pulsar-reactive = "0.5.6"
 reactor = "2023.0.8"
 spring = "6.1.11"
