@@ -1,6 +1,6 @@
 services:
   pulsar:
-    image: 'apachepulsar/pulsar:3.3.0'
+    image: 'apachepulsar/pulsar:3.3.1'
     ports:
       - '6650'
       - '8080'
