@@ -10,6 +10,11 @@ This section covers the changes made from version 1.1 to version 1.2.
 You can provide your own Jackson `ObjectMapper` that Pulsar will use when producing and consuming JSON messages.
 See xref:./reference/custom-object-mapper.adoc[Custom Object Mapper] for more details.
 
+=== Deprecations
+
+==== PulsarClient#getPartitionsForTopic(java.lang.String)
+Version `3.3.1` of the Pulsar client deprecates the `getPartitionsForTopic(java.lang.String)` in favor of `getPartitionsForTopic(java.lang.String, boolean metadataAutoCreationEnabled)`.
+
 [[what-s-new-in-1-1-since-1-0]]
 == What's New in 1.1 Since 1.0
 :page-section-summary-toc: 1
